@@ -48,7 +48,7 @@ $_LANG['No such requests in database.'] = 'Nie ma żadnych zgłoszeń w bazie da
 $_LANG['Number:'] = 'Numer:';
 $_LANG['open'] = 'otwarty';
 $_LANG['Request history'] = 'Historia zgłoszeń';
-$_LANG['Request No. $a'] = 'Zgłoszenie Nr $a';
+$_LANG['Request No. $a / Queue: $b'] = 'Zgłoszenie Nr $a / Kolejka: $b';
 $_LANG['resolved'] = 'rozwiązany';
 $_LANG['- select queues -'] = '- wybierz kolejki -';
 $_LANG['- select user -'] = '- wybierz użytkownika -';
